[package]
name = "yew-attributes-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.20", features=["csr"] }
yew-attributes-macro-derive = {path = "../yew-attributes-macro-derive"}
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlElement"
]