[package]
name = "yew-html-attributes-demo-input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20.0"
yew-attributes-macro = {path = "../yew-attributes-macro"}
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "Node",
    "NodeList",
    "Performance",
    "PerformanceEntry",
    "PerformanceMark",
    "PerformanceMeasure",
    "PerformanceObserver",
    "PerformanceObserverEntryList",
    "Request",
    "Response",
    "Window",
]
