[package]
name = "yew-html-attributes-demo"
version = "0.1.0"
edition = "2021"
description = "A Yew app to demonstrate the use of HTML attributes"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
