[package]
name = "yew-html-attributes-macro-derive"
description = "A crate containing the proc-macro for the yew-html-attributes crate"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/oxabz/yew-html-attributes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
csv = "1.1"
proc-macro2 = "1.0"
lazy_static = "1.4"
regex = "1" 