[package]
name = "yew-html-attributes"
description = "Easily forwarding standard HTML attributes to a html element"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/oxabz/yew-html-attributes"
keywords = ["yew", "html", "attributes", "macro"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.20", features=["csr"] }
yew-html-attributes-macro-derive = {path = "../yew-html-attributes-macro-derive"}
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlElement"
]